# simple_system_monitor

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
config/: simple_system_monitor_config.yaml
launch/: simple_system_monitor.launch
src/simple_system_monitor/: simple_system_monitor.py  simple_system_monitor_node.py  system_monitor.py
