<?xml version="1.0"?>
<package format="2">
  <name>simple_system_monitor</name>
  <version>0.2.0</version>
  <description>The simple_system_monitor package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jmartinez@robotnik.es">jmartinez</maintainer>

  <license>BSD</license>

  <author email="jmartinez@robotnik.es">jmartinez</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <exec_depend>robotnik_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
